Fixed filter panel behavior on mobile screens

--- a/src/components/FishFilter/FishFilterPanel.module.css
+++ b/src/components/FishFilter/FishFilterPanel.module.css
@@ -8,7 +8,7 @@
   max-width: 20rem;
   overflow: hidden;
   user-select: none;
-  z-index: 5;
+  z-index: 15;
 }
 
 .FishFilterPanelActions {
@@ -101,6 +101,7 @@
 
 @media (max-width: 1023px) {
   .FishFilterPanel {
+    border-left: none;
     position: absolute;
     top: 0;
     right: 0;
